# credit-risk-montecarlo-analysis

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
data/: README.md
notebooks/: exploracion_completa.ipynb
output/monte_carlo/: base_vs_stress_comparison.csv  comparacion_metricas_base_vs_stress.csv  metricas_riesgo.csv  metrics_stress_pd.csv  resumen_riesgo.txt  risk_metrics_base.csv  risk_metrics_stress.csv
output/plots/: loan_status_distribution.csv
output/tables/: comparacion_pre_post.csv  correlation_matrix.csv  descriptive_statistics.csv  eda_resumen.csv  eda_summary.csv  el_decomposition_by_quintile.csv  estadisticas_descriptivas.csv  estadisticas_descriptivas_postlimpieza.csv  hypothesis_test_income.csv  logistic_regression_coefficients.csv  missing_values_initial.csv  model_validation_report.csv  nulos.csv  regresion_logistica_coeficientes.csv  stats_delta_pre_post.csv  stats_post_limpieza.csv  stats_post_treatment.csv  stats_pre_limpieza.csv  stats_pre_treatment.csv  test_medias_ingreso.csv  valores_faltantes_inicial.csv
scripts/: run_pipeline.py
src/credit_risk/: __init__.py  app.py  config.py  logger_config.py  model.py  monte_carlo.py  preprocessing.py  risk_decomposition.py  visualization.py
tests/: test_model.py  test_monte_carlo.py
