[project]
name = "credit-risk-montecarlo-analysis"
version = "0.1.0"
description = "Análisis de riesgo crediticio mediante simulación Monte Carlo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.4",
    "statsmodels>=0.14.0",
    "lets-plot>=4.0.0",

    # Dependencias de entorno (originalmente en requirements.txt)
    "asttokens==3.0.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "executing==2.2.1",
    "ipykernel==7.2.0",
    "ipython==9.12.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "packaging==26.1",
    "parso==0.8.6",
    "platformdirs==4.9.6",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "Pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.1.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.5",
    "traitlets==5.14.3",
    "wcwidth==0.6.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
